--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* General */
 a {
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
@@ -17,6 +18,7 @@ h1 {
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
+/* Header */
 #header {
     position: fixed;
     top: 0;
@@ -28,6 +30,7 @@ h1 {
     padding: 20px 20px 0px;
 }
 
+/* Nav Menu */
 .nav-menu * {
     margin: 0;
     padding: 0;
@@ -56,7 +59,6 @@ h1 {
 
 .nav-menu a i {
     font-size: 16px;
-    /* Se eliminó la sombra del ícono */
 }
 
 .nav-menu a span {
@@ -73,6 +75,7 @@ h1 {
     color: #fff;
 }
 
+/* Mobile Navigation */
 .mobile-nav-toggle {
     position: fixed;
     right: 15px;
@@ -104,12 +107,14 @@ h1 {
     color: #fff;
 }
 
+/* Player */
 #player {
     margin: 0px auto;
     width: 100%;
     height: 100%;
 }
 
+/* Hora Background */
 .background_hora {
     width: 196px;
     height: 46px;
@@ -132,6 +137,7 @@ h1 {
     color: red;
 }
 
+/* Back-to-top Button */
 .back-to-top {
     position: fixed;
     display: none;
@@ -159,6 +165,7 @@ h1 {
     transition: background .2s ease-in-out;
 }
 
+/* Scroll Text Animation */
 @keyframes scrollText {
     from {
         transform: translateX(100%);
@@ -174,6 +181,7 @@ h1 {
     animation: scrollText 10s linear infinite;
 }
 
+/* Media Queries */
 @media (min-width: 992px) {
     .mobile-nav-toggle {
         display: none;
@@ -199,6 +207,6 @@ h1 {
         display: none;
     }
     #relogio {
-        display: none;
-    }
+        display: none;
+    }
 }
